Code/minikube/devops.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-test
  labels:
    app.kubernetes.io/name: ingress-test
    app.kubernetes.io/managed-by: ThanhNT
    app.kubernetes.io/instance: ingress-test
spec:
  type: ClusterIP
  ports:

    port: 80

      targetPort: 80
      protocol: TCP
  selector:
    app.kubernetes.io/name: ingress-test
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-test
  labels:
    app.kubernetes.io/name: ingress-test
    app: ingress-test
    app.kubernetes.io/managed-by: ThanhNT
    app.kubernetes.io/instance: ingress-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ingress-test
      app: ingress-test
      app.kubernetes.io/managed-by: ThanhNT
      app.kubernetes.io/instance: ingress-test
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ingress-test
        app: ingress-test
        app.kubernetes.io/managed-by: ThanhNT
        app.kubernetes.io/instance: ingress-test
    spec:
      imagePullSecrets:

    name: registry

      securityContext:
        {}
      containers:

    name: ingress-test

          securityContext:
            {}
          image: nginx
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 200m
              memory: 200Mi
            requests:
              cpu: 200m
              memory: 200Mi
          volumeMounts:

    mountPath: /usr/share/nginx/html/index.html

              name: 'ingress-test'
              subPath: index.html
      volumes:

    configMap:

            items:

    key: index.html

              path: index.html
            name: 'ingress-test'
          name: 'ingress-test'

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
  labels:
    app.kubernetes.io/name: ingress-test
    app.kubernetes.io/managed-by: ThanhNT
    app.kubernetes.io/instance: ingress-test
spec:
  ingressClassName: nginx
  rules:

    host: "ingress-test.vn"

      http:
        paths:

    path: /

            pathType: Prefix
            backend:
              service:
                name: ingress-test
                port:
                  number: 80
